# Super_Duper_Agent

./: .env.example  .gitignore  AGENT10-CROSS-CUTTING-REVIEW.md  AGENT_TEAM_OBSERVATION_LOG.md  ARCHITECTURE_REPORT.md  AUDIT_CLI.md  AUDIT_FIX_FINAL_REVIEW.md  AUDIT_INFRASTRUCTURE.md  AUDIT_PROMPTS.md  AUDIT_SCANS.md  AUDIT_TEAM_DESIGN.md  AUDIT_TEAM_REVIEW.md  Agent-team_New_Upgrades.md  Agent-team_New_Upgrades_V2.md  BAYAN_HISTORICAL_ANALYSIS.md  BUILD1_AUDIT_REPORT.md  BUILD2_AUDIT_REPORT.md  BUILD3_AUDIT_REPORT.md  CHEATSHEET.md  CONFIG_SCANS_REVIEW.md  CROSS_MODE_VERIFICATION_REPORT.md  DATABASE_INTEGRITY_REPORT.md  DATABASE_INTEGRITY_REVIEW_REPORT.md  DRAWSPACE_HISTORICAL_ANALYSIS.md  E2E_WIRING_REPORT.md  EXHAUSTIVE_PROMPT_FORMAT.md  MODE_UPGRADE_PROPAGATION_INVESTIGATION.md  MODE_UPGRADE_PROPAGATION_REPORT.md  PIPELINE_MAPPING_REPORT.md  PIPELINE_REVIEW.md  PRD_FIX_FINAL_REVIEW.md  PRD_FIX_RESEARCH_REPORT.md  PRD_FIX_REVIEW_REPORT.md  PRD_NORMALIZER_IMPLEMENTATION_PROMPT.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_VERDICT.md  PROMPTS_MODULES_REVIEW.md  PROOF_OF_POWER_PROMPT.md  README.md  RUN4_AUDIT_REPORT.md  (+74 more)
.claude/: settings.local.json
BAYAN_TENDER/: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  BAYAN_CLOSE_GAPS_PROMPT.md  BAYAN_SPECIFICATIONS.md  BAYAN_SPECIFICATIONS_CONDENSED.md  BUILD_LOG.md  CLOSE-3-GAPS-PRD.md  CODEBASE_EVIDENCE_BRIEF.md  DIAGNOSTIC_COLUMN_MAPPING.md  E2E-PRODUCTION-REPORT.md  E2E-TEST-REPORT.md  E2E_GUIDE_BAYAN_TENDER.md  E2E_HANDOFF.md  FINAL-100-PERCENT-REPORT.md  FINAL-VERIFICATION-REPORT.md  (+36 more)
(+1492 files in other folders)
